# NMFwisp

./: .flake8  .gitignore  pyproject.toml
.github/workflows/: python-package.yml
nmfwisp/: nmfwisp.py
nmfwisp/tests/: test_init.py
src/: __init__.py
