[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmfwisp"
description = "Subtract wisp artifacts in JWST NIRCam images with the non-negative matrix factorization (NMF) algorithm"
readme = "readme.md"
authors = [
    {name = "Zihao Wu", email = "zihao.wu@cfa.harvard.edu"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "photutils",
    "astropy"
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/version.py"

[project.urls]
Homepage = "https://github.com/zihaowu-astro/nmfwisp"
Repository = "https://github.com/zihaowu-astro/nmfwisp"
Issues = "https://github.com/zihaowu-astro/nmfwisp/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "flake8"
]

[tool.setuptools]
packages = ["src"]
